--- a/Authentification/app/templates/emailcofirm.html
+++ b/Authentification/app/templates/emailcofirm.html
@@ -1,8 +1,7 @@
-{% autoescape   %}
+{% autoescape off %}
 Bienvenue sur febrox system authentification
 Bonjour {{ name }}
-confirmer votre address avec le lien suivant :
+confirmer votre address avec le lien suivant:
 
-lien : https//{{ domain }}
-{% {% url 'activate' uidb64 = uid token = token %} %}
+lien: https//{{ domain }}{% url 'activate' uidb64=uid token=token %}
 {% endautoescape %}
